--- a/style04.css
+++ b/style04.css
@@ -1,4 +1,4 @@
-/*  basedo em CSS Grid Layout Module Level 1 de
+/*  baseado em CSS Grid Layout Module Level 1 de
     W3C Candidate Recommendation, 21 October 2020 */
 
 body {  background-color: #e67300;);      }
